# drogon-installer

./: .gitignore  README.md  bootstrap.sh  drogon.json  drogon.py  install.py  installation.md  pyproject.toml
.github/workflows/: release.yml
drogon_cli/: main.py
drogon_cli/scripts/: windows.ps1
scripts/: linux.sh  macos.sh  windows.ps1
test/: test_install.py
